--- a/WinFormUI/App.config
+++ b/WinFormUI/App.config
@@ -11,7 +11,7 @@
                 <value />
             </setting>
             <setting name="password" serializeAs="String">
-                <value>0</value>
+                <value />
             </setting>
             <setting name="rememberMe" serializeAs="String">
                 <value>False</value>
