--- a/WinFormUI/Properties/Settings.settings
+++ b/WinFormUI/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="password" Type="System.String" Scope="User">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="rememberMe" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
